
    HADOOP-11628. SPNEGO auth does not work with CNAMEs in JDK8.
    (Daryn Sharp via stevel)

    HADOOP-11685. StorageException complaining " no lease ID" during HBase
    distributed log splitting (Duo Xu via cnauroth)

    HADOOP-12440. TestRPC#testRPCServerShutdown did not produce the desired
    thread states before shutting down. (Xiao Chen via mingma)

    HADOOP-12758. Extend CSRF Filter with UserAgent Checks
    (Larry McCay via cnauroth)

    HADOOP-12366. expose calculated paths (aw)

    HADOOP-12059. S3Credentials should support use of CredentialProvider.
    (Sean Busbey via wang)

    HADOOP-12548. Read s3a creds from a Credential Provider.
    (Larry McCay via cnauroth)

    HADOOP-11031. Design Document for Credential Provider API.
    (Larry McCay via cnauroth)

    HADOOP-11827. Speed-up distcp buildListing() using threadpool
    (Zoran Dimitrijevic via raviprak)

    HADOOP-12794. Support additional compression levels for GzipCodec.
    (Ravi Mutyala via junping_du)

    HADOOP-7139. Allow appending to existing SequenceFiles
    (kanaka kumar avvaru via vinayakumarb)

    HADOOP-11491. HarFs incorrectly declared as requiring an authority.
    (Brahma Reddy Battula via gera)

    HADOOP-1540. Support file exclusion list in distcp. (Rich Haase via jing9)

    HADOOP-12292. Make use of DeleteObjects optional.
    (Thomas Demoor via stevel)

    HADOOP-12045. Enable LocalFileSystem#setTimes to change atime.
    (Kazuho Fujii via cnauroth)

    HADOOP-12696. Add tests for S3Filesystem Contract (Matt Paduano via raviprak)

    HADOOP-11717. Support JWT tokens for web single sign on to the Hadoop
    servers. (Larry McCay via omalley)

  OPTIMIZATIONS

    HADOOP-7713. dfs -count -q should label output column (Jonathan Allen
    via aw)

    HADOOP-11772. RPC Invoker relies on static ClientCache which has
    synchronized(this) blocks. (wheat9)

    HADOOP-12317. Applications fail on NM restart on some linux distro